--- a/CodeCampProject/CSS_Project/index.html
+++ b/CodeCampProject/CSS_Project/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css"/>
     <title>Cafe Menu</title>
-    <link href="styles.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="menu">
